# kuhn-poker-escher-experiments

./: .gitignore  CODE_REVIEW.md  README.md  TESTING.md  TODO.md  pyproject.toml  requirements.txt
debug_escher-exp220260523-022739_20260525T220423Z/: 01_job_status.yaml  02_task_status.yaml  03_job_spec.yaml  FAIL_TIME.txt  INSTANCE_ID.txt  JOB_UID.txt
docs/: GCP_BATCH_EXPERIMENTS.md  OUTPUT_CONVENTIONS.md
escher_poker/: __init__.py  ablation_plotting.py  chart_titles.py  checkpoint_analysis.py  checkpoint_plotting.py  constants.py  experiment_utils.py  hyperparameter_search.py  networks.py  plotting.py  policy_snapshots.py  replay.py  solver.py
experiments/kuhn_poker/: __init__.py  escher_architecture_base.py  escher_single_seed_variant_runner.py
experiments/kuhn_poker/escher_activation_sweep/: README.md  __init__.py  config.py  run.py
experiments/kuhn_poker/escher_author_budget_multiseed/: README.md  __init__.py  config.py  run.py
experiments/kuhn_poker/escher_bottleneck_architecture_sweep/: README.md  __init__.py  config.py  run.py
experiments/kuhn_poker/escher_checkpoint_stability/: README.md  __init__.py  config.py  run.py
gcp/: read_batch_task_logs.sh  submit_batch_experiment.sh
notebooks/: kuhn_poker_escher_multiseed_baseline_aligned.ipynb
scripts/: upload_outputs_to_gcs.py
tests/: test_author_budget_multiseed_config.py  test_chart_titles.py  test_escher_architecture_experiment_configs.py  test_imports.py  test_network_size_sweep_config.py  test_promote_thesis_artifacts.py  test_upload_outputs_to_gcs.py
(+72 files in other folders)
